资产模块完成
